pkg/objects/Certification__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                    <label>Em Progresso</label>
                </value>
                <value>
                    <fullName>Expired</fullName>
                    <label>Expirado</label>
                </value>
                <value>
                    <fullName>Ativo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cert_extern__c</fullName>
        <externalId>true</externalId>
        <label>Cert extern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certificacao_Obtida__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Certificação Obtida</label>
        <referenceTo>Certification__c</referenceTo>
        <relationshipLabel>Certificações Obtidas</relationshipLabel>
        <relationshipName>Certifica_es_Obtidas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certificao__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Certificação</label>
        <referenceTo>CertificationRegister__c</referenceTo>
        <relationshipLabel>Certificações Obtidas (Certificação)</relationshipLabel>
        <relationshipName>Certifica_es_Obtidas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CertificationDate__c</fullName>
        <label>Data da Certificação</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CertificationType__c</fullName>
        <label>Tipo de Certificação</label>
        <referenceTo>CertificationRegister__c</referenceTo>
        <relationshipLabel>Certificações Obtidas</relationshipLabel>
        <relationshipName>Certifications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DataLimiteparaCadastrodoVoucher__c</fullName>
        <label>Data Limite para Cadastro do Voucher</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DataLimiteparaUsodoVoucher__c</fullName>
        <label>Data Limite para Uso do Voucher</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_da_Manutencao__c</fullName>
        <label>Data da Manutenção</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Funcionário</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Certificações Obtidas</relationshipLabel>
        <relationshipName>Certifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Data de Renovação</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Projeto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Projeto</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Certificações Obtidas</relationshipLabel>
        <relationshipName>Certifica_es_Obtidas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuarterVoucher__c</fullName>
        <label>Quarter do Voucher</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1° Quarter</fullName>
                </value>
                <value>
                    <fullName>2° Quarter</fullName>
                </value>
                <value>
                    <fullName>3° Quarter</fullName>
                </value>
                <value>
                    <fullName>4° Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <formula>CertificationType__r.Release__c</formula>
        <label>Release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher__c</fullName>
        <label>Voucher</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Courtesy Salesforce</fullName>
                    <label>Cortesia Salesforce</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                    <label>Pago</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nomeCertDataStatus__c</fullName>
        <formula>CertificationType__r.Name  &amp; &quot; &quot; &amp; IF(ISBLANK( CertificationDate__c ), &quot;Status: &quot; &amp;  TEXT(Active__c) , &quot;Data da Prova: &quot; &amp; TEXT(CertificationDate__c) &amp; &quot; &quot; &amp; &quot;Status: &quot; &amp;  TEXT(Active__c))</formula>
        <label>nomeCertDataStatus</label>
        <type>Text</type>
    </fields>
    <label>Certificação Obtida</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee_Name__c</columns>
        <columns>CertificationType__c</columns>
        <columns>CertificationDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Código de Certificação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Certificações Obtidas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>