pkg/objects/Certification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>CertificationType__c</columns>
    <columns>CertificationDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>